objects/Operating_Company__c.object
<CustomObject>
    <fields>
        <fullName>Default_TFN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default TFN</label>
        <referenceTo>TFN__c</referenceTo>
        <relationshipLabel>Operating Companies</relationshipLabel>
        <relationshipName>Operating_Companies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OperatingCompany__c</fullName>
        <label>Operating Company</label>
        <picklist>
            <picklistValues>
                <fullName>PMUSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUMRK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRC Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trade__c</fullName>
        <formula>ISPICKVAL(OperatingCompany__c, &apos;Trade&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trade</label>
        <type>Checkbox</type>
    </fields>
    <label>Operating Company</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OperatingCompany__c</columns>
        <columns>Default_TFN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OpCo - {00000}</displayFormat>
        <label>OperatingCompany</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>